--- a/FlightExercise/flights-data/pom.xml
+++ b/FlightExercise/flights-data/pom.xml
@@ -2,7 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>flights-data</groupId>
   <artifactId>flights-data</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0</version>
+    <packaging>jar</packaging>
     <properties>
         <uber.jar.name>cassandra.jar</uber.jar.name>
         <uber.jar.main.class>com.flights.LoadToFlightsTable</uber.jar.main.class>
@@ -10,16 +11,8 @@
     </properties>
 
     <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>java</sourceDirectory>
     <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
-        </configuration>
-      </plugin>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -28,35 +21,32 @@
                 <target>1.8</target>
             </configuration>
         </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-shade-plugin</artifactId>
-            <version>2.4.3</version>
-            <configuration>
-                <outputFile>target/${uber.jar.name}</outputFile>
-                <shadedArtifactAttached>false</shadedArtifactAttached>
-                <minimizeJar>true</minimizeJar>
-                <filters>
-                </filters>
-                <transformers>
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                    <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                        <manifestEntries>
-                            <Main-Class>${uber.jar.main.class}</Main-Class>
-                        </manifestEntries>
-                    </transformer>
-                </transformers>
-            </configuration>
-            <executions>
-                <execution>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>shade</goal>
-                    </goals>
-                </execution>
-            </executions>
-        </plugin>
-    </plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <outputFile>target/${uber.jar.name}</outputFile>
+                    <shadedArtifactAttached>false</shadedArtifactAttached>
+                    <transformers>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <manifestEntries>
+                                <Main-Class>${uber.jar.main.class}</Main-Class>
+                            </manifestEntries>
+                        </transformer>
+                    </transformers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
   </build>
   <dependencies>
 	<dependency>
