--- a/FlightExercise/flights-data/pom.xml
+++ b/FlightExercise/flights-data/pom.xml
@@ -5,6 +5,8 @@
   <version>1.0</version>
     <packaging>jar</packaging>
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <uber.jar.name>cassandra.jar</uber.jar.name>
         <uber.jar.main.class>com.flights.LoadToFlightsTable</uber.jar.main.class>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -13,22 +15,6 @@
     <build>
     <sourceDirectory>java</sourceDirectory>
     <plugins>
-        <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.1</version>
-            <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
-            </configuration>
-        </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>1.8</source>
-                <target>1.8</target>
-            </configuration>
-        </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
